fixing bugs and add comments

--- a/website/style.css
+++ b/website/style.css
@@ -30,14 +30,17 @@ body{
 
 #date{
 
+    color: #f23557;
 }
 
 #temp{
 
+    color: #22b2da;
 }
 
 #content{
 
+    color: antiquewhite;
 }
 
 .headline {
